Fixed services title text align

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -89,7 +89,7 @@ $primary-color: #333333;
 			filter: grayscale(20%); 
 		}
 		.services-title-container {
-			width: 100%;
+			width: 92%; 
 			font-size: 2em;
 			color: #ffffff;
 			text-shadow: 1px 1px #333;
